[FIX] Overflow on login page [FIX] Window resize event on Header wasn't detected when maximizing the window [ADD] Translation

--- a/onboard_2024_front/src/app/login/login.component.scss
+++ b/onboard_2024_front/src/app/login/login.component.scss
@@ -12,6 +12,7 @@
   height: calc(100vh - 64px);
   width: 100%;
   background-color: inherit;
+  overflow-y: hidden;
 
   @media (max-width: 600px) {
     width: 67%;
@@ -35,7 +36,6 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    overflow: hidden;
     background-color: var(--sys-surface-container);
     padding: $gap-large;
     width: 100%;
